--- a/VOIPSimplek/MainWindow.xaml
+++ b/VOIPSimplek/MainWindow.xaml
@@ -7,9 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
+        <StackPanel>
         <Button Height="20"
                 Width="50"
                 Click="cs_Answer_Click"
-                Margin="23,20,444,279">Answer</Button>
+                Margin="38,196,429,103">Answer</Button>
+            <TextBox Text="{Binding PhoneNumber}"></TextBox>
+        </StackPanel>
     </Grid>
 </Window>
